third_party/move/move-compiler-v2/tests/uninit-use-checker/v1-borrows/eq_unassigned_local.exp
============ initial bytecode ================

[variant baseline]
fun <SELF>_0::main() {
     var $t0: &u64
     var $t1: bool
     var $t2: &u64
     var $t3: &u64
     var $t4: u64
  0: $t2 := infer($t0)
  1: $t4 := 5
  2: $t3 := borrow_local($t4)
  3: $t1 := ==($t2, $t3)
  4: return ()
}


Diagnostics:
error: use of unassigned local `ref`
  ┌─ tests/uninit-use-checker/v1-borrows/eq_unassigned_local.move:5:9
  │
5 │         ref == &x;
  │         ^^^

============ after uninitialized_use_checker: ================

[variant baseline]
fun <SELF>_0::main() {
     var $t0: &u64
     var $t1: bool
     var $t2: &u64
     var $t3: &u64
     var $t4: u64
     # before: { no: $t0, $t1, $t2, $t3, $t4 }, after: { no: $t0, $t1, $t3, $t4 }
  0: $t2 := infer($t0)
     # before: { no: $t0, $t1, $t3, $t4 }, after: { no: $t0, $t1, $t3 }
  1: $t4 := 5
     # before: { no: $t0, $t1, $t3 }, after: { no: $t0, $t1 }
  2: $t3 := borrow_local($t4)
     # before: { no: $t0, $t1 }, after: { no: $t0 }
  3: $t1 := ==($t2, $t3)
     # before: { no: $t0 }, after: { no: $t0 }
  4: return ()
}
